--- a/package.json
+++ b/package.json
@@ -3,19 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "sinon": "^16.0.0",
+    "sinon-chai": "^3.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "jest": "jest __test__/jest/getWeather.test.js",
+    "mocha": "cross-env NODE_ENV=test mocha --require @babel/register --require ignore-styles --require jsdom-global/register __test__/mocha/getWeather.test.js",
+    "jasmine": "cross-env NODE_ENV=test jasmine --config=spec/support/jasmine_react.json",
+    "cypress": "cross-env NODE_ENV=test cypress run --component",
+    "cypress:open": "cross-env NODE_ENV=test cypress open --component"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +45,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.19",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/register": "^7.22.15",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^29.6.4",
+    "babel-preset-react-app": "^10.0.1",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ignore-styles": "^5.0.1",
+    "jasmine": "^5.1.0",
+    "jest": "^27.5.1",
+    "jsdom": "^22.1.0",
+    "jsdom-global": "^3.0.2",
+    "react-test-renderer": "^18.2.0"
   }
 }
