--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "jest": "jest __test__/jest/getWeather.test.js",
-    "mocha": "cross-env NODE_ENV=test mocha --require @babel/register --require ignore-styles --require jsdom-global/register __test__/mocha/getWeather.test.js",
+    "jest": "jest __test__/jest/",
+    "mocha": "cross-env NODE_ENV=test mocha --require @babel/register --require ignore-styles --require jsdom-global/register __test__/mocha/",
     "jasmine": "cross-env NODE_ENV=test jasmine --config=spec/support/jasmine_react.json",
     "cypress": "cross-env NODE_ENV=test cypress run --component",
     "cypress:open": "cross-env NODE_ENV=test cypress open --component"
@@ -48,11 +48,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.19",
-    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/register": "^7.22.15",
     "babel-cli": "^6.26.0",
-    "babel-jest": "^29.6.4",
+    "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
     "cross-env": "^7.0.3",
     "cypress": "^13.2.0",
